# secureweb_flyshop

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  packages.txt
buildtools/: generate_cert.sh  otemplate.sh
src/: main.c
src/include/: assets.h  csrf.h  database.h  encryption.h  pages.h  session.h  staticloader.h  webserver.h
src/lib/: csrf.c  database.c  encryption.c  pages.c  session.c  staticloader.c  webserver.c
templates/: admin.html  dashboard.html  header.html  index.html  login.html  orders.html  profile.html  register.html
